# foundation_PLR

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .renvignore  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE.local.md.template  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.r  Dockerfile.shiny  Dockerfile.test  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  CONTEXT_FOR_EXTERNAL_AI.md  GUARDRAILS.md  KNOWLEDGE_GRAPH.md  README.md  README_PROGRESSIVE.md  SYNTHESIS.md  auto-context.yaml
.claude/code-reviews/: README.md  REVIEW-SUMMARY.md  tdd-compliance-review-lookup-model-names.md  tdd-test-cases-expansion.md
.claude/commands/: figures.md  manuscript.md  update-readmes.md  validate.md
.claude/domains/: configuration.md  mlflow-experiments.md  testing.md  visualization.md
.claude/institutional-knowledge/: combo-selection-rationale.md
.claude/planning/: README.md  cd_diagram_panel_c_categories.md  data-integrity-fixes-2026-01-28.md  docker-reproducibility-plan.md  documentation-deployment-plan.xml  figure-improvement-plan-with-ggplot2.md  figure-qa-and-improvements.md  figure-test-harness-TDD-execution.xml  figure-test-harness.md  finish-end-to-end-pipeline-for-viz.md  ggplot2-viz-creation-plan.xml  ggplot2-viz-remaining-plan.xml  recreate-figures-with-hyperparam-combos.md  shap-importance-multi-fix.md  variance-decomposition-redesign.md
.claude/plans/: stratos-metrics-pipeline-fix.md
.claude/rules/: 00-research-question.md  05-registry-source-of-truth.md  10-figures.md  15-stratos-metrics.md  20-package-management.md  25-no-reimplementation.md
.claude/scripts/: combo_validator.py
.cursor/: rules
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  ciso-assistant-security.yml  config-integrity.yml  deploy-docs.yml  docker.yml  notebook-tests.yml
apps/visualization/: CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
assets/: README.md
configs/: README.md  _version_manifest.yaml  data_isolation.yaml  debug_run.yaml  defaults.yaml  demo_subjects.yaml  hyperparam_sweep.yaml  registry_canary.yaml  synthetic_run.yaml
configs/CLS_HYPERPARAMS/: CATBOOST_hyperparam_space.yaml  LogisticRegression_hyperparam_space.yaml  README.md  TabM_hyperparam_space.yaml  TabPFN_hyperparam_space.yaml  XGBOOST_hyperparam_space.yaml
configs/CLS_MODELS/: CATBOOST.yaml  LogisticRegression.yaml  README.md  TabM.yaml  TabPFN.yaml  XGBOOST.yaml
configs/CLS_TS_MODELS/: MOMENT.yaml
configs/MODELS/: CSDI.yaml  (+6 more)
data/: README.md  _checksums.sha256
docs/: AI-ASSISTED-DEVELOPMENT.md  API_ARCHITECTURE.md  KNOWLEDGE_GRAPH.md  STRATOS_CALIBRATION_IMPLEMENTATION.md  TRIPOD-CODE-COMPLIANCE.md  concepts-for-researchers.md  index.md  mlflow-naming-convention.md  repo-documentation-plan.md  test-coverage-improvement-plan.md
figures/: README.md
notebooks/: 01-pipeline-walkthrough.qmd  02-reproduce-and-extend.qmd  README.md  _quarto.yml  comprehensive_guide.ipynb  data_access_tutorial.ipynb  reproducibility_tutorial.ipynb
scripts/: README.md  reproduce_all_results.py
src/: README.md  __init__.py  create_prefect_deployment.py  pipeline_PLR.py  reconstruct.py  utils.py
tests/: README.md  conftest.py  mlflow_tests.py  test_data_integrity.py  test_docker_full.py  test_docker_r.py  test_extraction_double_check.py  test_extraction_verification.py  test_figure_data_consistency.py  test_foundation_plr.py  test_makefile_compliance.py  test_orchestration_flows.py  test_pminternal_extraction.py  test_pminternal_figure.R  test_pminternal_json.py  test_r_environment.py  test_registry.py  test_repo_metadata.py  test_report_metrics.py  test_shap_extraction.py  test_vif_analysis.py
(+1015 files in other folders)
