[project]
name = "repo-plr"
version = "0.1.0"
description = "Foundation models for pupillary light reflex preprocessing in glaucoma screening"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.7",
    "duckdb-engine>=0.13.4",
    "duckdb>=1.1.2",
    "emd>=0.8.1",
    "emd-signal>=1.9.0",
    "fastexcel>=0.12.0",
    "gdown>=5.2.0",
    "hurst>=0.0.5",
    "hydra-core>=1.3.2",
    "hyperopt>=0.2.7",
    "libauc>=1.4.0",
    # "lightgbm>=4.6.0",  # Uncomment to add LightGBM classifier
    "loguru>=0.7.2",
    "missforest>=3.1.3",
    "mlflow>=2.22.4",
    "momentfm>=0.1.1",
    "numpy==1.25.2",
    "optuna>=4.0.0",
    "pandas>=2.1.0",
    "patool>=3.0.3",
    "polars[all]>=1.12.0",
    "pre-commit>=4.0.1",
    "prefect>=3.0.11",
    "prophet>=1.1.6",
    "psutil>=6.1.0",
    "pyemd>=1.1.0",
    "pynvml>=11.5.3",
    "pypots>=0.8.1",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "reformer-pytorch>=1.4.4",
    "rtdl-num-embeddings==0.0.12",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "scikit-multilearn>=0.2.0",
    "statsmodels>=0.14.0",
    "timm>=1.0.11",
    "torchmetrics>=1.5.1",
    "tqdm>=4.66.5",
    "umap-learn>=0.5.7",
    "xgboost>=2.1.2",
    "factor-analyzer>=0.5.1",
    "pysindy>=1.7.5",
    "pydmd>=2025.8.1",
    # Transitive dep floors for Dependabot security patches
    "urllib3>=2.6.3",
    "protobuf>=5.29.6",
    "jinja2>=3.1.6",
    "requests>=2.32.4",
    "setuptools>=78.1.1",
    "cryptography>=44.0.1",
    "h11>=0.16.0",
    "pyasn1>=0.6.2",
    "filelock>=3.20.3",
    "fonttools>=4.60.2",
    "h2>=4.3.0",
    "virtualenv>=20.36.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "-ra", "--strict-markers", "--dist=loadfile"]
markers = [
    "unit: Pure function unit tests (fast, no external deps)",
    "integration: Integration tests using demo data",
    "e2e: End-to-end tests (full pipeline, may be slow)",
    "slow: Tests that take > 30 seconds",
    "guardrail: Code quality guardrail tests (file scanning, no data deps)",
    "data: Tests requiring data/r_data or data/public files",
    "r_required: Tests requiring R/Rscript installation",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "prefect>=3.0.11",
]
dev = [
    "imagehash>=4.3.2",
    "mypy>=1.8.0",
    "pillow>=11.0.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.5.0",
    "types-PyYAML>=6.0.0",
    "pandas-stubs>=2.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "jupyter>=1.1.1",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "tests/",
    "scripts/",
    ".venv/",
    "apps/",
]

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "prefect.*",
    "hydra.*",
    "omegaconf.*",
    "loguru.*",
    "catboost.*",
    "xgboost.*",
    "polars.*",
    "pypots.*",
    "momentfm.*",
    "sklearn.*",
    "cupy.*",
    "prophet.*",
    "emd.*",
    "hurst.*",
    "pyemd.*",
    "statsmodels.*",
    "umap.*",
    "factor_analyzer.*",
    "pysindy.*",
    "pydmd.*",
]
ignore_missing_imports = true
